[project]
name = "anyloc"
version = "0.2.0"
description = "Towards Universal Visual Place Recognition"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "AnyLoc Team", email = "robotics@iiit.ac.in"}
]
maintainers = [
    {name = "AnyLoc Team", email = "robotics@iiit.ac.in"}
]
keywords = ["computer-vision", "visual-place-recognition", "deep-learning", "robotics"]
requires-python = ">=3.10"
dependencies = [
   "transformers==4.28.0",
    "einops",
    "fast-pytorch-kmeans==0.1.6",
    "faiss-gpu==1.7.2",
    "torchvision==0.14.1",
]
[project.urls]
Homepage = "https://anyloc.github.io/"
Repository = "https://github.com/AnyLoc/AnyLoc"
Documentation = "https://anyloc.github.io/"
"Bug Tracker" = "https://github.com/AnyLoc/AnyLoc/issues"
"Paper" = "https://arxiv.org/abs/2308.00688"
"Demo" = "https://huggingface.co/spaces/TheProjectsGuy/AnyLoc"
"Colab Global Descriptors" = "https://colab.research.google.com/github/AnyLoc/AnyLoc/blob/main/demo/anyloc_vlad_generate_colab.ipynb"
"Colab Cluster Visualizations" = "https://colab.research.google.com/github/AnyLoc/AnyLoc/blob/main/demo/images_vlad_clusters.ipynb"